Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124200

Linguist 'does not know the plural rules for Luganda'

XMLWordPrintable

    • 1d48bf34d (dev), 6d47929df (dev), 17a5c83eb (6.8), 9c8592bc3 (6.7), 40d40864c (tqtc/lts-6.5), f55f8fdb1 (tqtc/lts-5.15)

          Problem
          Opened a .ts file which had its target language set to Luganda ('Ganda').
          Expected to be able to translate strings including their plural options.
          Instead the following happens:
             a. It complains that it does not know the plural rules for the language (attached picture 'does-not-know-plurals-rules.png'.)
             b. It does not allow translation for plurals (attached picture, 'unpatched-behaviour.png'.)

          Cause
          Missing entry for 'Ganda' in <somepath>/qt5/qttools/src/linguist/shared/numerus.cpp
          (Also noted that <somepath>/qt5/qtbase/util/locale_database/testlocales/localemodel.cpp is missing an entry for the same language)
           
           Fix
           Apply patch to <somepath>/qt5/qttools/src/linguist/shared/numerus.cpp. Attachment 'numerus-ganda-patch.txt'.
           It adds the language into the 'English style' section.
           (Patch also supplied for <somepath>/qt5/qtbase/util/locale_database/testlocales/localemodel.cpp. Attachment 'localemodel-ganda-patch.txt'.)

        1. does-not-know-plurals-rules.png
          does-not-know-plurals-rules.png
          54 kB
        2. localemodel-ganda-patch.txt
          3 kB
        3. numerus-ganda-patch.txt
          0.3 kB
        4. qtdiag-output.txt
          9 kB
        5. unpatched-behaviour.png
          unpatched-behaviour.png
          200 kB
        For Gerrit Dashboard: QTBUG-124200
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            kizito Kizito Birabwa
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes