Linguist: Add plurals rule for the Ganda language

Add Ganda to the list of languages with English-style plural rules.
Thanks to Kizito Birabwa for the patch!

Fixes: QTBUG-124200
Pick-to: 5.15 6.5 6.7 6.8
Change-Id: I6ad55ecdd7b3ee07deed13167130410e29287aaf
Reviewed-by: Kai Köhne <kai.koehne@qt.io>