src/linguist/shared/numerus.cpp
@@ -151,6 +151,7 @@ static const QLocale::Language englishStyleLanguages[] = {
     QLocale::Friulian,
     QLocale::WesternFrisian,
     QLocale::Galician,
+    QLocale::Ganda,
     QLocale::Georgian,
     QLocale::German,
     QLocale::Greek,
